--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "unalbumer",
-  "version": "0.3.0",
+  "version": "0.4.0",
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
     "global": "^4.3.2",
     "history": "^4.7.2",
+    "install": "^0.12.1",
+    "jest": "^23.5.0",
+    "milligram": "^1.3.0",
+    "npm": "^6.4.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
