--- a/package.json
+++ b/package.json
@@ -4,10 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "axios-mock-adapter": "^1.15.0",
+    "enzyme": "^3.5.0",
+    "enzyme-adapter-react-16": "^1.3.0",
     "global": "^4.3.2",
     "history": "^4.7.2",
     "install": "^0.12.1",
-    "jest": "^23.5.0",
     "milligram": "^1.3.0",
     "npm": "^6.4.0",
     "prop-types": "^15.6.2",
@@ -19,6 +21,7 @@
     "react-router-redux": "next",
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
+    "redux-mock-store": "^1.5.3",
     "redux-thunk": "^2.3.0"
   },
   "scripts": {
@@ -33,6 +36,7 @@
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.1"
+    "eslint-plugin-react": "^7.11.1",
+    "react-test-renderer": "^16.4.2"
   }
 }
