--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "version": "0.4.0",
   "private": true,
   "jest": {
+    "preset": "jest-puppeteer",
     "collectCoverageFrom": [
-        "src/**/*.js",
-        "!src/registerServiceWorker.js",
-        "!src/index.js"
-      ]
+      "src/**/*.js",
+      "!src/registerServiceWorker.js",
+      "!src/index.js"
+    ]
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -17,9 +18,11 @@
     "global": "^4.3.2",
     "history": "^4.7.2",
     "install": "^0.12.1",
+    "jest-puppeteer": "^3.3.1",
     "milligram": "^1.3.0",
     "npm": "^6.4.0",
     "prop-types": "^15.6.2",
+    "puppeteer": "^1.7.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-google-login": "^3.2.1",
@@ -33,8 +36,9 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:mocks": "REACT_APP_MOCKS=true react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "react-scripts test --env=jsdom --coverage",
     "lint": "./node_modules/eslint/bin/eslint.js src/",
     "eject": "react-scripts eject"
   },
