--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "react-router-redux": "next",
     "redux": "^4.0.0",
     "redux-mock-store": "^1.5.3",
+    "redux-saga": "^0.16.0",
     "redux-thunk": "^2.3.0",
     "resolve": "1.6.0",
     "style-loader": "0.19.0",
